--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,5 +24,15 @@
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
+        <action
+            android:id="@+id/action_SecondFragment_to_PersonForm"
+            app:destination="@id/PersonForm" />
+    </fragment>
+    <fragment
+        android:id="@+id/PersonForm"
+        android:name="com.example.androidjavastudy.PersonForm"
+        android:label="@string/form_fragment"
+        tools:layout="@layout/fragment_person_form">
+
     </fragment>
 </navigation>
